tests/typecheck/should_compile/tc039.hs
module ShouldSucceed where

class (Eq a) => A a where
 op1 :: a -> a
